# phd-shortlist-builder

./: .dockerignore  .gitignore  DECISIONS.md  DELIVERY_README.md  Dockerfile  README.md  docker-compose.yml  implementation_plan_final (1)  main.py  models.py  pdf_content.txt  pyproject.toml  requirements.txt  schema.md  test_db.py
.github/workflows/: ci.yml
api/: app.py  index_tasks.py
api/routes/: feedback.py  indexing.py  shortlist.py
chains/: __init__.py  confidence_breakdown_chain.py  domain_check_chain.py  pi_verify_chain.py  query_expansion_chain.py  why_match_chain.py
config/: settings.py
data_sources/: base.py  cache.py  openalex.py  semantic_scholar.py
db/: crud.py  engine.py  models.py
feedback/: __init__.py  feedback_analysis_chain.py  improver.py
graph/: edges.py  pipeline_graph.py  state.py
graph/nodes/: audit_node.py  enrich_node.py  ingest_node.py  output_node.py  resolve_node.py  retrieve_node.py  score_node.py  validate_node.py  verify_pi_node.py
llm/: key_rotation.py  providers.py
sample_output/: e2e_test-student.json  s1.json  s10.json  s11.json  s12.json  s13.json  s14.json  s15.json  s16.json  s17.json  s18.json  s2.json  s3.json  s4.json  s5.json  s6.json  s7.json  s8.json  s9.json  sample_candidates.json  test_001.json  test_002.json  test_003.json  test_004.json  test_005.json  test_006.json  test_007.json  test_008.json  test_009.json  test_010.json  test_final.json
scripts/: build_chroma_index.py  fast_shortlist.py  run_audit_node_test.py  run_e2e_smoke.py  run_enrich_node_test.py  run_output_node_test.py  run_resolve_node_test.py  run_retrieve_node_test.py  run_score_node_test.py  run_validate_node_test.py
tests/: test_audit_node.py  test_enrich_node.py  test_output_node.py  test_resolve_node.py  test_retrieve_node.py  test_score_node.py  test_score_node_chroma.py  test_validate_node.py
tests/fixtures/: sample_student_profile.json
tests/integration/: test_full_pipeline.py
tools/: __init__.py  faculty_directory_tool.py  findaphd_tool.py  nih_reporter_tool.py  openalex_tool.py  semantic_scholar_tool.py  ukri_gateway_tool.py
vectorstore/: chroma_store.py  embedder.py
