[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phd-shortlist-builder"
version = "1.0.0"
description = "AI-powered PhD supervisor shortlist builder using LangChain + LangGraph"
requires-python = ">=3.11"

dependencies = [
    # LangChain / LangGraph core
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
    # "langchain-chroma>=0.1.0",
    # "langchain-huggingface>=0.1.0",
    "langgraph-checkpoint-postgres>=2.0.0",

    # LLM providers
    "groq>=0.11.0",
    "ollama>=0.3.0",

    # Vector store & embeddings
    # "chromadb>=0.5.0",
    # "sentence-transformers>=3.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",

    # Web scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",

    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.8.0",

    # Data processing
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pandas>=2.2.0",

    # Caching & utilities
    "diskcache>=5.6.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "PyYAML>=6.0.0",
    "python-dateutil>=2.9.0",

    # Observability
    "langsmith>=0.1.140",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[project.scripts]
phd-builder = "main:app"

[tool.setuptools]
packages = [
    "api",
    "chains",
    "config",
    "data_sources",
    "db",
    "entity_resolution",
    "feedback",
    "graph",
    "llm",
    "scoring",
    "tools",
    "vectorstore"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
